--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
       background-color: #f8f9fa;
       margin: 0;
       padding: 0;
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
