--- a/class10.html
+++ b/class10.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
       background-color: #faf7f0;
       line-height: 1.6;
     }
@@ -186,5 +186,6 @@ li strong {
 
 </body>
 </html>
+
 
 
