--- a/class12.html
+++ b/class12.html
@@ -11,7 +11,7 @@
   <style>
     /* Base layout */
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
       background-color: #faf7f0;
       line-height: 1.6;
       margin: 0;
