--- a/class10.html
+++ b/class10.html
@@ -80,14 +80,11 @@ li strong {
 </head>
 <body>
 
-  <header>
-    <div id="google_translate_element" style="text-align: right; margin: 20px;"></div>
-    <div class="container">
-      <h1>📘 Class 10 Government Jobs</h1>
-      <p>Explore Sarkari Naukri options after Class 10 with free resources, videos, PDFs and tips</p>
-      <a href="index.html" class="cta-button">← Back to Home</a>
-    </div>
-  </header>
+<header>
+  <h1>📘 Class 10 Government Jobs</h1>
+  <p>Your Friend in the Journey to a Government Job</p>
+</header>
+
 
   <!-- Search Bar -->
   <div class="search-bar">
@@ -186,6 +183,7 @@ li strong {
 
 </body>
 </html>
+
 
 
 
