--- a/class12.html
+++ b/class12.html
@@ -155,14 +155,11 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>📘 Government Jobs after Class 12</h1>
-      <p>Your guide for HS-level (Class 12) government job options — links, tips, important dates</p>
-      <a class="back-home" href="index.html">← Back to Home</a>
-    </div>
-  </header>
-
+<header>
+  <h1>📘 Class 12 Government Jobs</h1>
+  <p>Your Friend in the Journey to a Government Job</p>
+</header>
+  
   <div class="container">
     <div class="top-bar">
       <div class="search-bar">
