--- a/exam-template.html
+++ b/exam-template.html
@@ -105,7 +105,11 @@
   </style>
 </head>
 <body>
-  <header id="exam-title">Loading...</header>
+  <header>
+  <h1>EXAM</h1>
+  <p>Your Friend in the Journey to a Government Job</p>
+</header>
+
   <main>
     <div class="info-box" id="why-box"></div>
 
