--- a/exam-template.html
+++ b/exam-template.html
@@ -105,10 +105,11 @@
   </style>
 </head>
 <body>
-  <header>
-  <h1>EXAM</h1>
+<header>
+  <h1 id="exam-title">Loading...</h1>
   <p>Your Friend in the Journey to a Government Job</p>
 </header>
+
 
   <main>
     <div class="info-box" id="why-box"></div>
