--- a/exam-template.html
+++ b/exam-template.html
@@ -85,7 +85,7 @@
     }
     .button-apply {
   display: inline-block;
-  background: #ff6b35;
+  background: #4CAF50;
   color: #fff;
   padding: 0.8rem 1.6rem;
   border-radius: 999px;
@@ -96,7 +96,7 @@
   transition: background 0.3s ease, transform 0.2s ease;
 }
 .button-apply:hover {
-  background: #e85a2c;
+  background: #3e8e41;
   transform: translateY(-2px);
 }
 .button-apply:active {
