--- a/Index.html
+++ b/Index.html
@@ -91,18 +91,18 @@
   </div>
 
   <section class="categories">
-    <div class="category-card" onclick="location.href='class10.html'">
-      <h3>📚 Class 10 Jobs</h3>
-      <p>Government jobs you can apply after Class 10.</p>
-    </div>
-    <div class="category-card" onclick="location.href='class12.html'">
-      <h3>📘 Class 12 Jobs</h3>
-      <p>Opportunities after passing Class 12.</p>
-    </div>
-    <div class="category-card" onclick="location.href='graduation.html'">
-      <h3>🎓 Graduation Jobs</h3>
-      <p>Jobs for degree holders.</p>
-    </div>
+<div class="category-card" onclick="location.href='jobs-template.html?category=class10'">
+  <h3>📚 Class 10 Jobs</h3>
+  <p>Government jobs you can apply after Class 10.</p>
+</div>
+<div class="category-card" onclick="location.href='jobs-template.html?category=class12'">
+  <h3>📘 Class 12 Jobs</h3>
+  <p>Opportunities after passing Class 12.</p>
+</div>
+<div class="category-card" onclick="location.href='jobs-template.html?category=graduation'">
+  <h3>🎓 Graduation Jobs</h3>
+  <p>Jobs for degree holders.</p>
+</div>
     <div class="category-card" onclick="location.href='scholarships.html'">
       <h3>💰 Scholarships</h3>
       <p>Free education funding opportunities.</p>
@@ -142,6 +142,7 @@
 
 </body>
 </html>
+
 
 
 
