--- a/jobs-template.html
+++ b/jobs-template.html
@@ -80,46 +80,50 @@
         const list = document.getElementById("jobList");
         list.innerHTML = "";
 
+// Prepare section lists
 const stateList = [];
 const centralList = [];
 
 // Filter rows for this category
-dataRows.filter(r => r[0].trim().toLowerCase() === category).forEach(r => {
+dataRows.filter(r => (r[0] || "").trim().toLowerCase() === category).forEach(r => {
   const job = {};
-  headers.forEach((h, i) => job[h] = r[i] || "");
+  headers.forEach((h, i) => job[h] = (r[i] || "").trim());
+  
   const liHTML = `<li><a href="${job.link}">
                     <strong>${job.title}</strong>${job.description}<br>
                     <span class="meta">${job.meta}</span>
                   </a></li>`;
-  if (job.section && job.section.trim().toLowerCase() === "state") {
+  
+  const sectionValue = (job.section || "").toLowerCase();
+  if (sectionValue === "state") {
     stateList.push(liHTML);
-  } else {
+  } else if (sectionValue === "central") {
     centralList.push(liHTML);
   }
 });
 
 // Output State section first
-const list = document.getElementById("jobList");
-list.innerHTML = "";
+const listContainer = document.getElementById("jobList");
+listContainer.innerHTML = "";
 
 if (stateList.length) {
   const h2 = document.createElement("h2");
   h2.textContent = "🌾 Assam State Govt Exams";
-  list.appendChild(h2);
+  listContainer.appendChild(h2);
   const ul = document.createElement("ul");
   ul.className = "job-summary";
   ul.innerHTML = stateList.join("");
-  list.appendChild(ul);
+  listContainer.appendChild(ul);
 }
 
 if (centralList.length) {
   const h2 = document.createElement("h2");
   h2.textContent = "🏛️ Central Level Exams (All India)";
-  list.appendChild(h2);
+  listContainer.appendChild(h2);
   const ul = document.createElement("ul");
   ul.className = "job-summary";
   ul.innerHTML = centralList.join("");
-  list.appendChild(ul);
+  listContainer.appendChild(ul);
 }
 
       })
