--- a/jobs-template.html
+++ b/jobs-template.html
@@ -118,7 +118,7 @@ if (stateList.length) {
 
 if (centralList.length) {
   const h2 = document.createElement("h2");
-  h2.textContent = "🏛️ Central Level Exams (All India)";
+  h2.textContent = "🏛️ Central Govt Exams (All India)";
   listContainer.appendChild(h2);
   const ul = document.createElement("ul");
   ul.className = "job-summary";
