--- a/jobs-template.html
+++ b/jobs-template.html
@@ -84,23 +84,29 @@
 const stateList = [];
 const centralList = [];
 
-// Filter rows for this category
-dataRows.filter(r => (r[0] || "").trim().toLowerCase() === category).forEach(r => {
-  const job = {};
-  headers.forEach((h, i) => job[h] = (r[i] || "").trim());
-  
-  const liHTML = `<li><a href="${job.link}">
-                    <strong>${job.title}</strong>${job.description}<br>
-                    <span class="meta">${job.meta}</span>
-                  </a></li>`;
-  
-  const sectionValue = (job.section || "").toLowerCase();
-  if (sectionValue === "state") {
-    stateList.push(liHTML);
-  } else if (sectionValue === "central") {
-    centralList.push(liHTML);
-  }
-});
+// Filter only rows for jobs list type & category
+dataRows
+  .filter(r => {
+    const rowType = (r[0] || "").trim().toLowerCase(); // type
+    const rowCategory = (r[1] || "").trim().toLowerCase(); // category
+    return rowType === "list" && rowCategory === category;
+  })
+  .forEach(r => {
+    const job = {};
+    headers.forEach((h, i) => job[h] = (r[i] || "").trim());
+
+    const liHTML = `<li><a href="exam-template.html?id=${job.exam_id}">
+                      <strong>${job.title}</strong>${job.description}<br>
+                      <span class="meta">${job.meta}</span>
+                    </a></li>`;
+
+    const sectionValue = (job.section || "").toLowerCase();
+    if (sectionValue === "state") {
+      stateList.push(liHTML);
+    } else if (sectionValue === "central") {
+      centralList.push(liHTML);
+    }
+  });
 
 // Output State section first
 const listContainer = document.getElementById("jobList");
@@ -118,7 +124,7 @@ if (stateList.length) {
 
 if (centralList.length) {
   const h2 = document.createElement("h2");
-  h2.textContent = "🏛️ Central Govt Exams (All India)";
+  h2.textContent = "🏛️ Central Level Exams (All India)";
   listContainer.appendChild(h2);
   const ul = document.createElement("ul");
   ul.className = "job-summary";
