--- a/jobs-template.html
+++ b/jobs-template.html
@@ -71,14 +71,63 @@
     document.getElementById("headerTitle").textContent = titles[category] || "Government Jobs";
     document.getElementById("pageTitle").textContent = titles[category] || "Government Jobs";
 
-    fetch(sheetUrl)
-      .then(res => res.text())
-      .then(text => {
-        const rows = text.trim().split("\n").map(r => r.split("\t"));
-        const headers = rows[0].map(h => h.trim().toLowerCase());
-        const dataRows = rows.slice(1);
-        const list = document.getElementById("jobList");
-        list.innerHTML = "";
+fetch(sheetUrl)
+  .then(res => res.text())
+  .then(text => {
+    const rows = text.trim().split("\n").map(r => r.split("\t"));
+    const headers = rows[0].map(h => h.trim().toLowerCase());
+    const dataRows = rows.slice(1);
+
+    const list = document.getElementById("jobList");
+    list.innerHTML = "";
+
+    const stateList = [];
+    const centralList = [];
+
+    const category = getCategoryFromUrl();
+
+    dataRows.forEach(r => {
+      const job = {};
+      headers.forEach((h, i) => job[h] = r[i] || "");
+
+      if (job.category.toLowerCase() !== category) return; // only show this category
+
+      const liHTML = `<li>
+        <a href="exam-template.html?exam_id=${job.exam_id}">
+          <strong>${job.title}</strong>${job.description}<br>
+          <span class="meta">${job.meta}</span>
+        </a>
+      </li>`;
+
+      if (job.section && job.section.trim().toLowerCase() === "state") {
+        stateList.push(liHTML);
+      } else {
+        centralList.push(liHTML);
+      }
+    });
+
+    if (stateList.length) {
+      const h2 = document.createElement("h2");
+      h2.textContent = "🌾 Assam State Govt Exams";
+      list.appendChild(h2);
+      const ul = document.createElement("ul");
+      ul.className = "job-summary";
+      ul.innerHTML = stateList.join("");
+      list.appendChild(ul);
+    }
+
+    if (centralList.length) {
+      const h2 = document.createElement("h2");
+      h2.textContent = "🏛️ Central Level Exams (All India)";
+      list.appendChild(h2);
+      const ul = document.createElement("ul");
+      ul.className = "job-summary";
+      ul.innerHTML = centralList.join("");
+      list.appendChild(ul);
+    }
+  })
+  .catch(err => console.error("Error loading jobs:", err));
+
 
 // Prepare section lists
 const stateList = [];
